--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     word-break: break-all; 
+    background: transparent;
 
   }
   
@@ -22,7 +23,12 @@
     cursor: pointer;
     margin: 0 6px;
   }
-  
+
+  .completed {
+    text-decoration: line-through;
+    background: rgba(161, 159, 159, 0.2);
+  }
+
   .erase {
     font-size: 15px;
     cursor: pointer;
